# SFML_Template

./: CMakeLists.txt  README.md
src/: Button.cpp  Button.h  PodCollection.cpp  PodCollection.h  Program.cpp  Program.h  State.cpp  State.h  StateMachine.cpp  StateMachine.h  Vector2Hash.cpp  Vector2Hash.h  main.cpp
